# sieve

./: .gitignore  .tarpaulin.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
scripts/: coverage.sh
src/: main.rs
src/tests/: mod.rs
