[package]
name = "sieve"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.11"
flate2 = "1.0"
indicatif = "0.17"
log = "0.4"
num_cpus = "1.16"
num-format = "0.4"
rayon = "1.6"
tempfile = "3.17"
term_size = "0.3"
thiserror = "2.0"
walkdir = "2.5"

[dev-dependencies]
criterion = "0.6"
